<resources>
    <string name="app_name">Surveyapp</string>
    <string name="new_user_title">New User Signup</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Type Full Names</string>
    <string name="new_username">Type Full Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="password">password</string>

    <string name="signup_btn">SignUp</string>
    <string name="login_btn">Login</string>
    <string name="register_textview">Register!</string>
    <string name="start_survey_textview">Start Survey</string>
    <string name="start_survey_btn">Start</string>
    <string name="gender_textview">Your Gender</string>
    <string name="farm_size_edit_text">Your Farm Size (Hectares)</string>
    <string name="gender_hint">Select Your Gender</string>
    <string name="gender_btn">Next</string>
    <string name="size_of_farm">Farm Size</string>
    <string name="farm_size_btn">Next</string>
    <string name="end_note">Thank you for participating in the Survey</string>
    <string name="take_photo_btn">Take Photo</string>
    <string name="take_picture_description">Sample Photo</string>
    <string name="submit_btn">Submit</string>
    <string name="name_btn">Next</string>
    <string name="name_textview">Your Name</string>
    <string name="name_hint_edit_text">Type Your Name"</string>
    <string name="name_edit_text">Type Your Name</string>

    <string name="title_name">Name</string>
    <string name="title_gender">Gender</string>
    <string name="title_farm_size">Farm Size</string>
    <string name="title_farmer_name">Name</string>
    <string name="title_end_note">End Note</string>
    <string name="cd_name">Name</string>
    <string name="cd_gender">Gender</string>
    <string name="cd_farm_size">Farm Size</string>
    <string name="cd_end_note">End Note</string>



    <!-- options for gender fragment -->
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>




</resources>