<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EndNoteFragment">

    <TextView
        android:id="@+id/end_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_note"
        android:textSize="22sp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--
    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
-->
    <Button
        android:id="@+id/take_pic_btn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:text="@string/take_photo_btn"
        android:background="@drawable/custom_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_note" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:elevation="2dp"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_pic_btn"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".41" />





</androidx.constraintlayout.widget.ConstraintLayout>