<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SizeFarmFragment">

    <TextView
        android:id="@+id/farm_size_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_of_farm"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/farm_size_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@+id/farm_size_edittext"
        android:autofillHints=""
        android:layout_marginTop="100dp"
        android:text="@string/farm_size_edit_text"
        android:textSize="22sp"
        android:fontFamily="sans-serif-light"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/rounded_border_edittext"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/farm_size_txt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/farm_size_btn"
        android:background="@drawable/custom_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farm_size_edittext" />


</androidx.constraintlayout.widget.ConstraintLayout>